test: Java 17 でもテストが動くように修正 (#46)