@@ -51,6 +51,18 @@
         </plugins>
       </build>
     </profile>
+    <profile>
+      <id>java17</id>
+      <properties>
+        <junit.additionalArgLine>
+          --add-opens java.base/java.lang=ALL-UNNAMED
+          --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+          --add-opens java.base/java.io=ALL-UNNAMED
+          --add-opens java.base/java.security=ALL-UNNAMED
+          --add-opens java.base/java.util=ALL-UNNAMED
+        </junit.additionalArgLine>
+      </properties>
+    </profile>
   </profiles>
 
   <dependencies>
